unpackaged/objects/wb_Currency__c.object
<CustomObject>
    <description>WellBe Currency Master</description>
    <fields>
        <fullName>CeilingUnit__c</fullName>
        <label>CEILING単位</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencySymbol__c</fullName>
        <label>通貨記号</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roundup_D__c</fullName>
        <label>Roundup_D</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roundup__c</fullName>
        <label>切り上げ</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>通貨</label>
    <nameField>
        <label>通貨名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>